tests/error/type_match/base_case_array_mismatched_size.bz
function test()
{
	let _: [4: int32] = [5: int32]();
}
